--- a/RedFaction/Assembly-CSharp.csproj
+++ b/RedFaction/Assembly-CSharp.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Assets\DownloadedAssets\Standard Assets\Utility\WaypointCircuit.cs" />
     <Compile Include="Assets\DownloadedAssets\Standard Assets\Utility\WaypointProgressTracker.cs" />
     <Compile Include="Assets\Scripts\Aim.cs" />
+    <Compile Include="Assets\Scripts\AmoBox.cs" />
     <Compile Include="Assets\Scripts\Bullet.cs" />
     <Compile Include="Assets\Scripts\DestroyBullet.cs" />
     <Compile Include="Assets\Scripts\EnnemieHealth.cs" />
